# metaculus_coding_test

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  mypy.ini  pyproject.toml  tox.ini
metaculus_probability_distribution/: admin.py  apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
metaculus_probability_distribution/migrations/: 0001_initial.py  0002_prediction_predictionpoint_and_more.py  0003_prediction_brier_score_question_question_open_and_more.py
metaculus_probability_distribution/templates/metaculus_probability_distribution/: add_question.html  close_question.html  detail.html  index.html  predict.html  prediction.html
